# landau-game

./: .env.example  .gitignore  MANUAL_TEST_CHECKLIST.md  PLAN.md  README.md  Technical specs.rtf  pyproject.toml  render.yaml
app/: __init__.py  admin_service.py  cards.py  config.py  content.py  database.py  dependencies.py  game_logic.py  game_service.py  main.py  models.py
app/routers/: __init__.py  admin.py  api.py  public.py
app/static/css/: admin.css  base.css  game.css
app/static/js/: game.js  swipe-card.js
app/templates/: admin_dashboard.html  admin_login.html  base.html  final.html  play.html  review.html
app/templates/components/: decision_card.html  identity_card.html  landau_card.html
data/: questions.json
scripts/: init_db.py  make_qr.py
tests/: conftest.py  test_admin.py  test_answer_api.py  test_cards.py  test_content.py  test_game_logic.py  test_public_routes.py
